# asynchronize

./: CMakeLists.txt  README.md
.circleci/: config.yml
doc/: jack_asynchronize
doc/html/: annotated.html  asynchronize_8hpp_source.html  classes.html  classjack_1_1broadcast__event-members.html  classjack_1_1broadcast__event.html  classjack_1_1channel-members.html  classjack_1_1channel.html  classjack_1_1event-members.html  classjack_1_1event.html  classjack_1_1multicast__event-members.html  classjack_1_1multicast__event.html  classjack_1_1sticky__event-members.html  classjack_1_1sticky__event.html  classjack_1_1toggle__event-members.html  classjack_1_1toggle__event.html  classjack_1_1unicast__event-members.html  classjack_1_1unicast__event.html  dir_6897d2f5bfcbefb584a8a8a68742fff3.html  dir_d44c64559bbebec7f509842c48db8b23.html  files.html  functions.html  functions_func.html  index.html
doc/html/search/: all_2.js  all_3.js  all_5.js  all_6.js  all_8.js  all_9.js  classes_0.js  classes_1.js  classes_3.js  classes_4.js  classes_5.js  functions_2.js  searchdata.js
doc/latex/: annotated.tex  asynchronize_8hpp_source.tex  classjack_1_1broadcast__event.tex  classjack_1_1channel.tex  classjack_1_1event.tex  classjack_1_1multicast__event.tex  classjack_1_1sticky__event.tex  classjack_1_1toggle__event.tex  classjack_1_1unicast__event.tex  files.tex  refman.tex
examples/: CMakeLists.txt  a.out  ex_broadcast_event.cpp  ex_channel.cpp  ex_helpers.hpp  makefile
include/jack/: asynchronize.hpp
